# StakkenFourth

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt
src/stakken-client/: CMakeLists.txt  main.cpp
src/stakken-core/: CMakeLists.txt
src/stakken-core/Game/: Player.hpp
src/stakken-server/: CMakeLists.txt
